--- a/css/styles.css
+++ b/css/styles.css
@@ -89,20 +89,21 @@ section {
 }
 
 .list__edit {
-    color: brown;
-    border: 1px black solid;
-    padding: 0.8em;
+    color: #000;
+    padding: 1.5em;
     text-align: center;
     transition: ease-in-out 0.5s all;
-    background-color: rgb(223, 219, 203);
+}
+.list__edit:hover {
+    cursor:pointer; 
+    background-color: black;
+    color: whitesmoke;
 }
 
 #navbar__list {
     display: flex;
-    background:linear-gradient(65deg, rgb(211, 191, 75) 10%, rgb(36,56,87) 50%);
-    padding: 0.8em;
-    justify-content: space-between;
-    border: rgb(153, 128, 153) 5px solid;
+    background:whitesmoke;
+    justify-content: space-evenly;
 }
 
 
