--- a/css/styles.css
+++ b/css/styles.css
@@ -217,13 +217,12 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 .active-class {
     border: black 5px solid;
+    border-radius: 10px;
+    background-color: rgba(160, 160, 160, 0.644);
+    transition: ease 2s all;
 }
 
 
-section.active-class {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
-}
 
 section.active-class .landing__container::before {
     opacity: 1;
